; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_revert.c_cmd_cherry_pick.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_revert.c_cmd_cherry_pick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.replay_opts = type { i32 }

@REPLAY_OPTS_INIT = common dso_local global %struct.replay_opts zeroinitializer, align 4
@REPLAY_PICK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"cherry-pick failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_cherry_pick(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.replay_opts, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = bitcast %struct.replay_opts* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.replay_opts* @REPLAY_OPTS_INIT to i8*), i64 4, i1 false)
  %10 = load i32, i32* @REPLAY_PICK, align 4
  %11 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %7, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = call i32 @sequencer_init_config(%struct.replay_opts* %7)
  %13 = load i32, i32* %4, align 4
  %14 = load i8**, i8*** %5, align 8
  %15 = call i32 @run_sequencer(i32 %13, i8** %14, %struct.replay_opts* %7)
  store i32 %15, i32* %8, align 4
  %16 = load i32, i32* %8, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @die(i32 %19)
  br label %21

21:                                               ; preds = %18, %3
  %22 = load i32, i32* %8, align 4
  ret i32 %22
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @sequencer_init_config(%struct.replay_opts*) #2

declare dso_local i32 @run_sequencer(i32, i8**, %struct.replay_opts*) #2

declare dso_local i32 @die(i32) #2

declare dso_local i32 @_(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
